--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,6 @@
-<div>
+<div ng-controller="homeController">
   <label>Hello? Is anybody there?</label>
   <input type="text" ng-model="hello" placeholder="Maybe a traditional greeting?">
   <hr>
-  <h1>{{hello}}</h1>
+  <p>{{hello}}</p>
 </div>
