--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,14 +1,16 @@
 <div ng-controller="homeController">
-  <h2>View Map</h2>
 
-  <label><input type="checkbox" checked="true" ng-click="toggleLayer(transit)">Transit</label>
-  <label><input type="checkbox" checked="true" ng-click="toggleLayer(dumps)">Dumps</label>
-  <label><input type="checkbox" checked="true" ng-click="toggleLayer(fireStations)">Fire Stations</label>
-  <label><input type="checkbox" checked="true" ng-click="toggleLayer(colleges)">Colleges</label>
-  <label><input type="checkbox" checked="true" ng-click="toggleLayer(schools)">Schools</label>
-  <label><input type="checkbox" checked="true" ng-click="toggleLayer(policeStations)">Police Stations</label>
-  <label><input type="checkbox" checked="true" ng-click="toggleLayer(hospitals)">Hospitals</label>
-  <label><input type="checkbox" checked="true" ng-click="toggleLayer(bars)">Bars</label>
+  <div class="map-filters">
+    <h3>Filter Noise Types</h3>
+    <label><input type="checkbox" checked="true" ng-click="toggleLayer(transit)">Transit</label>
+    <label><input type="checkbox" checked="true" ng-click="toggleLayer(dumps)">Dumps</label>
+    <label><input type="checkbox" checked="true" ng-click="toggleLayer(fireStations)">Fire Stations</label>
+    <label><input type="checkbox" checked="true" ng-click="toggleLayer(colleges)">Colleges</label>
+    <label><input type="checkbox" checked="true" ng-click="toggleLayer(schools)">Schools</label>
+    <label><input type="checkbox" checked="true" ng-click="toggleLayer(policeStations)">Police Stations</label>
+    <label><input type="checkbox" checked="true" ng-click="toggleLayer(hospitals)">Hospitals</label>
+    <label><input type="checkbox" checked="true" ng-click="toggleLayer(bars)">Bars</label>
+  </div>
 
   <div id="map-canvas"></div>
 </div>
