zoom to current location added

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -18,6 +18,7 @@
         <input type="text" id="locationSearch" ng-model="locationSearch">
         <button ng-click="findLocation()">Search</button>
       </form>
+      <button ng-click="currentLocation()">Current Location</button>
     </div>
   </div>
 
