added construction and demolition layer checkboxes

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -11,6 +11,8 @@
       <label><input type="checkbox" checked="true" ng-click="toggleLayer(policeStations)">Police Stations</label>
       <label><input type="checkbox" checked="true" ng-click="toggleLayer(hospitals)">Hospitals</label>
       <label><input type="checkbox" checked="true" ng-click="toggleLayer(bars)">Bars</label>
+      <label><input type="checkbox" checked="true" ng-click="toggleLayer(construction)">Construction</label>
+      <label><input type="checkbox" checked="true" ng-click="toggleLayer(demolition)">Demolition</label>
     </div>
     <div class="location-search">
       <form>
