--- a/app/css/home.css
+++ b/app/css/home.css
@@ -4,8 +4,12 @@ body {
 }
 
 #map-canvas {
-  height: 90vh;
-  width: 90vw;
+  height: 70vh;
+  width: 65vw;
   margin: 0;
   padding: 0;
+}
+
+.map-filters {
+  
 }
