added font, fixed order of CSS stylesheet sheet link tags

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,16 +5,16 @@
     <div class="map-options">
       <div class="map-filters col-md-3">
         <h3>Filter Noise Types</h3>
-        <p><label><input type="checkbox" checked="true" ng-click="toggleLayer(transit)">Transit</label>
-        <p><label><input type="checkbox" checked="true" ng-click="toggleLayer(dumps)">Dumps</label>
-        <p><label><input type="checkbox" checked="true" ng-click="toggleLayer(fireStations)">Fire Stations</label>
-        <p><label><input type="checkbox" checked="true" ng-click="toggleLayer(colleges)">Colleges</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(schools)">Schools</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(policeStations)">Police Stations</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(hospitals)">Hospitals</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(bars)">Bars</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(construction)">Construction</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(demolition)">Demolition</label>
+        <p><input type="checkbox" checked="true" ng-click="toggleLayer(transit)"><label>Transit</label></p>
+        <p><input type="checkbox" checked="true" ng-click="toggleLayer(dumps)"><label>Dumps</label></p>
+        <p><input type="checkbox" checked="true" ng-click="toggleLayer(fireStations)"><label>Fire Stations</label></p>
+        <p><input type="checkbox" checked="true" ng-click="toggleLayer(colleges)"><label>Colleges</label></p>
+        <p><input type="checkbox" checked="true" ng-click="toggleLayer(schools)"><label>Schools</label></p>
+        <p><input type="checkbox" checked="true" ng-click="toggleLayer(policeStations)"><label>Police Stations</label></p>
+        <p><input type="checkbox" checked="true" ng-click="toggleLayer(hospitals)"><label>Hospitals</label></p>
+        <p><input type="checkbox" checked="true" ng-click="toggleLayer(bars)"><label>Bars</label></p>
+        <p><input type="checkbox" checked="true" ng-click="toggleLayer(construction)"><label>Construction</label></p>
+        <p><input type="checkbox" checked="true" ng-click="toggleLayer(demolition)"><label>Demolition</label></p>
       </div>
       <div class="col-md-9">
         <div class="location-search">
