--- a/app/css/home.css
+++ b/app/css/home.css
@@ -1,15 +1,32 @@
 body {
   height: 100vh;
   width: 100vw;
+  background-color: #E6E6E6;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Play', sans-serif;
+}
+
+h1 {
+  font-size: 3em;
+}
+
+h3 {
+  font-size: 2em;
 }
 
 #map-canvas {
   height: 70vh;
-  width: 65vw;
+  width: 70vw;
   margin: 0;
   padding: 0;
 }
 
-.map-filters {
-  
+.map-filters p {
+  font-size: 1.2em;
+}
+
+.map-filters p label {
+  margin-left: 1%;
 }
