--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,8 +2,21 @@
 
   <div class="row">
 
+    <div class="col-md-9 col-sm-12 col-xs-12">
+
+      <div id="map-canvas"></div>
+      <div class="location-search">
+        <form>
+          <label for="locationSearch">Find Location:</label>
+          <input type="text" id="locationSearch" ng-model="locationSearch">
+          <button ng-click="findLocation()">Search</button> OR
+          <button ng-click="currentLocation()">Use Current Location</button>
+        </form>
+      </div>
+    </div>
+
     <div class="map-options">
-      <div class="map-filters col-md-3">
+      <div class="map-filters col-md-3 col-sm-12 col-xs-12">
         <h3>Filter Noise Types</h3>
         <p><input type="checkbox" checked="true" ng-click="toggleLayer(transit)"><label>Transit</label></p>
         <p><input type="checkbox" checked="true" ng-click="toggleLayer(dumps)"><label>Dumps</label></p>
@@ -16,19 +29,8 @@
         <p><input type="checkbox" checked="true" ng-click="toggleLayer(construction)"><label>Construction</label></p>
         <p><input type="checkbox" checked="true" ng-click="toggleLayer(demolition)"><label>Demolition</label></p>
       </div>
-      <div class="col-md-9">
-        <div class="location-search">
-          <form>
-            <label for="locationSearch">Find Location:</label>
-            <input type="text" id="locationSearch" ng-model="locationSearch">
-            <button ng-click="findLocation()">Search</button>
-            <button ng-click="currentLocation()">Current Location</button>
-          </form>
-        </div>
-      </div>
     </div>
 
-    <div id="map-canvas"></div>
   </div>
 
 </div>
