--- a/app/views/home.html
+++ b/app/views/home.html
@@ -18,16 +18,16 @@
     <div class="map-options">
       <div class="map-filters col-md-3 col-sm-12 col-xs-12">
         <h3>Filter Noise Types</h3>
-        <p><input type="checkbox" checked="true" ng-click="toggleLayer(transit)"><label>Transit</label></p>
-        <p><input type="checkbox" checked="true" ng-click="toggleLayer(dumps)"><label>Dumps</label></p>
-        <p><input type="checkbox" checked="true" ng-click="toggleLayer(fireStations)"><label>Fire Stations</label></p>
-        <p><input type="checkbox" checked="true" ng-click="toggleLayer(colleges)"><label>Colleges</label></p>
-        <p><input type="checkbox" checked="true" ng-click="toggleLayer(schools)"><label>Schools</label></p>
-        <p><input type="checkbox" checked="true" ng-click="toggleLayer(policeStations)"><label>Police Stations</label></p>
-        <p><input type="checkbox" checked="true" ng-click="toggleLayer(hospitals)"><label>Hospitals</label></p>
-        <p><input type="checkbox" checked="true" ng-click="toggleLayer(bars)"><label>Bars</label></p>
-        <p><input type="checkbox" checked="true" ng-click="toggleLayer(construction)"><label>Construction</label></p>
-        <p><input type="checkbox" checked="true" ng-click="toggleLayer(demolition)"><label>Demolition</label></p>
+        <p><span class="glyphicon glyphicon-road clicked" ng-click="toggleLayer(transit); toggleHighlight()"></span><label>Transit</label></p>
+        <p><span class="glyphicon glyphicon-trash clicked" ng-click="toggleLayer(dumps)"></span><label>Dumps</label></p>
+        <p><span class="glyphicon glyphicon-fire clicked" ng-click="toggleLayer(fireStations)"></span><label>Fire Stations</label></p>
+        <p><span class="glyphicon glyphicon-pencil clicked" ng-click="toggleLayer(colleges)"></span><label>Colleges</label></p>
+        <p><span class="glyphicon glyphicon-book clicked" ng-click="toggleLayer(schools)"></span><label>Schools</label></p>
+        <p><span class="glyphicon glyphicon-bullhorn clicked" ng-click="toggleLayer(policeStations)"></span><label>Police Stations</label></p>
+        <p><span class="glyphicon glyphicon-plus-sign clicked" ng-click="toggleLayer(hospitals)"></span><label>Hospitals</label></p>
+        <p><span class="glyphicon glyphicon-glass clicked" ng-click="toggleLayer(bars)"></span><label>Bars</label></p>
+        <p><span class="glyphicon glyphicon-wrench clicked" ng-click="toggleLayer(construction)"></span><label>Construction</label></p>
+        <p><span class="glyphicon glyphicon-wrench clicked" ng-click="toggleLayer(demolition)"></span><label>Demolition</label></p>
       </div>
     </div>
 
