--- a/app/views/home.html
+++ b/app/views/home.html
@@ -28,6 +28,7 @@
         <p><span class="glyphicon glyphicon-glass clicked" ng-click="toggleLayer(bars)"></span><label>Bars</label></p>
         <p><span class="glyphicon glyphicon-wrench clicked" ng-click="toggleLayer(construction)"></span><label>Construction</label></p>
         <p><span class="glyphicon glyphicon-wrench clicked" ng-click="toggleLayer(demolition)"></span><label>Demolition</label></p>
+        <p><span class="glyphicon glyphicon-phone-alt clicked" ng-click="toggleLayer(noiseComplaints)"></span><label>911 Noise Complaints</label></p>
       </div>
     </div>
 
