--- a/app/css/home.css
+++ b/app/css/home.css
@@ -33,7 +33,7 @@ h3 {
 }
 
 .map-filters p {
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
 .map-filters p label {
@@ -54,6 +54,7 @@ input[checked="false"] {
   padding: 1%;
   border-radius: 3px;
   border: 4px solid blue;
+  margin-right: 2%;
 }
 
 .glyphicon {
@@ -63,11 +64,12 @@ input[checked="false"] {
 .clicked {
   border-radius: 3px;
   padding: 3%;
-  background-color: #F52F5D;
+  background-color: black;
+  margin-right: 2%;
 }
 
 input[type=checkbox]:not(:checked) ~ span {
-  background-color: black;
+  background-color: #F52F5D;
 
 }
 
