--- a/app/views/home.html
+++ b/app/views/home.html
@@ -20,16 +20,16 @@
         <h3>Filter Noise Types</h3>
 
         <label><p><input type="checkbox" checked="checked" ng-click="toggleLayer(transit)"></input><span class="glyphicon glyphicon-road clicked"></span>Transit</label></p>
-        <label><p><span class="glyphicon glyphicon-trash clicked"></span><input type="checkbox" checked="true" ng-click="toggleLayer(dumps)"></input>Dumps</label></p>
-        <label><p><input type="checkbox" checked="true" class="glyphicon glyphicon-fire clicked" ng-click="toggleLayer(fireStations)"></input>Fire Stations</label></p>
-        <label><p><input type="checkbox" checked="true" class="glyphicon glyphicon-pencil clicked" ng-click="toggleLayer(colleges)"></input>Colleges</label></p>
-        <label><p><input type="checkbox" checked="true" class="glyphicon glyphicon-book clicked" ng-click="toggleLayer(schools)"></input>Schools</label></p>
-        <label><p><input type="checkbox" checked="true" class="glyphicon glyphicon-bullhorn clicked" ng-click="toggleLayer(policeStations)"></input>Police Stations</label></p>
-        <label><p><input type="checkbox" checked="true" class="glyphicon glyphicon-plus-sign clicked" ng-click="toggleLayer(hospitals)"></input>Hospitals</label></p>
-        <label><p><input type="checkbox" checked="true" class="glyphicon glyphicon-glass clicked" ng-click="toggleLayer(bars)"></input>Bars</label></p>
-        <label><p><input type="checkbox" checked="true" class="glyphicon glyphicon-wrench clicked" ng-click="toggleLayer(construction)"></input>Construction</label></p>
-        <label><p><input type="checkbox" checked="true" class="glyphicon glyphicon-wrench clicked" ng-click="toggleLayer(demolition)"></input>Demolition</label></p>
-        <label><p><input type="checkbox" checked="true" class="glyphicon glyphicon-phone-alt clicked" ng-click="toggleLayer(noiseComplaints)"></input>911 Noise Complaints</label></p>
+        <label><p><input type="checkbox" checked="true" ng-click="toggleLayer(dumps)"></input><span class="glyphicon glyphicon-trash clicked"></span>Dumps</label></p>
+        <label><p><input type="checkbox" checked="true" ng-click="toggleLayer(fireStations)"></input><span class="glyphicon glyphicon-fire clicked"></span>Fire Stations</label></p>
+        <label><p><input type="checkbox" checked="true" ng-click="toggleLayer(colleges)"></input><span class="glyphicon glyphicon-pencil clicked"></span>Colleges</label></p>
+        <label><p><input type="checkbox" checked="true" ng-click="toggleLayer(schools)"></input><span class="glyphicon glyphicon-book clicked"></span>Schools</label></p>
+        <label><p><input type="checkbox" checked="true" ng-click="toggleLayer(policeStations)"></input><span class="glyphicon glyphicon-bullhorn clicked"></span>Police Stations</label></p>
+        <label><p><input type="checkbox" checked="true" ng-click="toggleLayer(hospitals)"></input><span class="glyphicon glyphicon-plus-sign clicked"></span>Hospitals</label></p>
+        <label><p><input type="checkbox" checked="true" ng-click="toggleLayer(bars)"></input><span class="glyphicon glyphicon-glass clicked"></span>Bars</label></p>
+        <label><p><input type="checkbox" checked="true" ng-click="toggleLayer(construction)"></input><span class="glyphicon glyphicon-wrench clicked"></span>Construction</label></p>
+        <label><p><input type="checkbox" checked="true" ng-click="toggleLayer(demolition)"></input><span class="glyphicon glyphicon-wrench clicked"></span>Demolition</label></p>
+        <label><p><input type="checkbox" checked="true" ng-click="toggleLayer(noiseComplaints)"></input><span class="glyphicon glyphicon-phone-alt clicked"></span>911 Noise Complaints</label></p>
       </div>
     </div>
 
