--- a/app/css/home.css
+++ b/app/css/home.css
@@ -73,6 +73,10 @@ input[type=checkbox]:not(:checked) ~ span {
 
 }
 
+.map-filters label {
+  display: block;
+}
+
 /* Media Query */
 
 @media only screen and (max-width: 990px) {
