--- a/app/views/map.html
+++ b/app/views/map.html
@@ -13,9 +13,10 @@
           <button ng-click="currentLocation()">Use Current Location</button>
         </form>
       </div> -->
+      
     </div>
 
-    <div class="map-options">
+    <!-- <div class="map-options">
       <div class="map-filters col-md-3 col-sm-12 col-xs-12">
         <h3>Filter Noise Types</h3>
 
@@ -76,7 +77,7 @@
         </label>
 
       </div>
-    </div>
+    </div> -->
 
   </div>
 
