initial toggle noise_type function

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -4,6 +4,8 @@
 
     <div class="col-md-9 col-sm-12 col-xs-12">
 
+      <button ng-click="toggleNoises('busStop')">Remove Bus Stops</button>
+
       <div id="map-canvas"></div>
       <!-- <div class="location-search">
         <form>
@@ -13,7 +15,7 @@
           <button ng-click="currentLocation()">Use Current Location</button>
         </form>
       </div> -->
-      
+
     </div>
 
     <!-- <div class="map-options">
