hooking up previous filters with new toggle function

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -4,8 +4,6 @@
 
     <div class="col-md-9 col-sm-12 col-xs-12">
 
-      <button ng-click="toggleNoises('busStop')">Remove Bus Stops</button>
-
       <div id="map-canvas"></div>
       <!-- <div class="location-search">
         <form>
@@ -18,68 +16,68 @@
 
     </div>
 
-    <!-- <div class="map-options">
+    <div class="map-options">
       <div class="map-filters col-md-3 col-sm-12 col-xs-12">
         <h3>Filter Noise Types</h3>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleLayer(transit)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('transit')"></input>
           <span class="glyphicon glyphicon-road clicked"></span>
           Transit
         </label>
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleLayer(dumps)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('dump')"></input>
           <span class="glyphicon glyphicon-trash clicked"></span>
           Dumps
         </label>
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleLayer(fireStations)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('fireStation')"></input>
           <span class="glyphicon glyphicon-fire clicked"></span>
           Fire Stations
         </label>
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleLayer(colleges)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('college')"></input>
           <span class="glyphicon glyphicon-pencil clicked"></span>
           Colleges
         </label>
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleLayer(schools)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('school')"></input>
           <span class="glyphicon glyphicon-book clicked"></span>
           Schools
         </label>
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleLayer(policeStations)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('policeStation')"></input>
           <span class="glyphicon glyphicon-bullhorn clicked"></span>
           Police Stations
         </label>
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleLayer(hospitals)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('hospital')"></input>
           <span class="glyphicon glyphicon-plus-sign clicked"></span>
           Hospitals
         </label>
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleLayer(bars)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('bar')"></input>
           <span class="glyphicon glyphicon-glass clicked"></span>
           Bars
         </label>
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleLayer(construction)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('construction')"></input>
           <span class="glyphicon glyphicon-wrench clicked"></span>
           Construction
         </label>
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleLayer(demolition)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('demolition')"></input>
           <span class="glyphicon glyphicon-wrench clicked"></span>
           Demolition
         </label>
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleLayer(noiseComplaints)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('noiseComplaints')"></input>
           <span class="glyphicon glyphicon-phone-alt clicked"></span>
           911 Noise Complaints
         </label>
 
       </div>
-    </div> -->
+    </div>
 
   </div>
 
