--- a/app/views/home.html
+++ b/app/views/home.html
@@ -19,17 +19,17 @@
       <div class="map-filters col-md-3 col-sm-12 col-xs-12">
         <h3>Filter Noise Types</h3>
 
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(transit)"></input><div class="switch"><span class="glyphicon glyphicon-road clicked"></span>Transit</div></label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(dumps)"></input><div class="switch"><span class="glyphicon glyphicon-trash clicked"></span>Dumps</div></label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(fireStations)"></input><div class="switch"><span class="glyphicon glyphicon-fire clicked"></span>Fire Stations</div></label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(colleges)"></input><div class="switch"><span class="glyphicon glyphicon-pencil clicked"></span>Colleges</div></label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(schools)"></input><div class="switch"><span class="glyphicon glyphicon-book clicked"></span>Schools</div></label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(policeStations)"></input><div class="switch"><span class="glyphicon glyphicon-bullhorn clicked"></span>Police Stations</div></label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(hospitals)"></input><div class="switch"><span class="glyphicon glyphicon-plus-sign clicked"></span>Hospitals</div></label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(bars)"></input><div class="switch"><span class="glyphicon glyphicon-glass clicked"></span>Bars</div></label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(construction)"></input><div class="switch"><span class="glyphicon glyphicon-wrench clicked"></span>Construction</div></label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(demolition)"></input><div class="switch"><span class="glyphicon glyphicon-wrench clicked"></span>Demolition</div></label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer(noiseComplaints)"></input><div class="switch"><span class="glyphicon glyphicon-phone-alt clicked"></span>911 Noise Complaints</div></label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer(transit)"></input><div class="switch"><span class="glyphicon glyphicon-road clicked"></span></div>Transit</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer(dumps)"></input><div class="switch"><span class="glyphicon glyphicon-trash clicked"></span></div>Dumps</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer(fireStations)"></input><div class="switch"><span class="glyphicon glyphicon-fire clicked"></span></div>Fire Stations</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer(colleges)"></input><div class="switch"><span class="glyphicon glyphicon-pencil clicked"></span></div>Colleges</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer(schools)"></input><div class="switch"><span class="glyphicon glyphicon-book clicked"></span></div>Schools</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer(policeStations)"></input><div class="switch"><span class="glyphicon glyphicon-bullhorn clicked"></span></div>Police Stations</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer(hospitals)"></input><div class="switch"><span class="glyphicon glyphicon-plus-sign clicked"></span></div>Hospitals</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer(bars)"></input><div class="switch"><span class="glyphicon glyphicon-glass clicked"></span></div>Bars</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer(construction)"></input><div class="switch"><span class="glyphicon glyphicon-wrench clicked"></span></div>Construction</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer(demolition)"></input><div class="switch"><span class="glyphicon glyphicon-wrench clicked"></span></div>Demolition</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer(noiseComplaints)"></input><div class="switch"><span class="glyphicon glyphicon-phone-alt clicked"></span></div>911 Noise Complaints</label>
 
       </div>
     </div>
