--- a/app/css/home.css
+++ b/app/css/home.css
@@ -36,10 +36,6 @@ h3 {
   font-size: 1.1em;
 }
 
-.map-filters p label {
-  margin-left: 1%;
-}
-
 .location-search {
   padding: 1%;
 }
@@ -50,19 +46,15 @@ input[type="checkbox"] {
   left: -9999px;
 }
 
-/*input[checked="false"] {
-  padding: 1%;
-  border-radius: 3px;
-  border: 4px solid blue;
-  margin-right: 2%;
-}*/
-
 .switch {
-  /*border: 1px black solid;*/
   width: 25%;
   height: 100%;
   background-color: green;
   display: inline-block;
+  position: relative;
+  border: 1px black solid;
+  margin-right: 1%;
+  border-radius: 3px;
 }
 
 label {
@@ -72,18 +64,23 @@ label {
 
 .glyphicon {
   color: white;
+  position: absolute;
+  padding: 8% 12%;
+  height: 10%;
   /*-webkit-box-shadow: 1px 1px 3px 4px #d3d3d3;
   -moz-box-shadow:    1px 1px 3px 4px #d3d3d3;
   box-shadow:         1px 1px 3px 4px #d3d3d3;*/
 }
 
 .clicked {
-  border-radius: 3px;
+  /*border-radius: 3px;*/
+  top: 0;
   background-color: black;
-  padding: 16%;
+  width: 50%;
+  height: 100%;
   /*margin-right: 2%;*/
   animation-name: slide_on;
-  animation-duration: 1s;
+  animation-duration: .7s;
   /* Chrome, Safari, Opera */
   -webkit-animation-name: slide_on;
   -webkit-animation-duration: 0.7s;
@@ -105,10 +102,6 @@ input[type=checkbox]:not(:checked) ~ div span {
   margin-left: 50%;
   background-color: gray;
 }
-
-/*input[type=checkbox]:not(:checked) ~ div span::after {
-  content: "OFF";
-}*/
 
 
 /* Media Query */
@@ -158,6 +151,7 @@ input[type=checkbox]:not(:checked) ~ div span {
   }
 }
 
+
 /* Chrome, Safari, Opera */
 @-webkit-keyframes slide_off {
   0% {
@@ -180,6 +174,7 @@ input[type=checkbox]:not(:checked) ~ div span {
     background-color: black;
   }
 }
+
 
 /* Firefox */
 @-moz-keyframes slide_off {
