--- a/app/views/map2.html
+++ b/app/views/map2.html
@@ -19,14 +19,14 @@
       <div class="map-filters col-md-3 col-sm-12 col-xs-12">
         <h3>Filter Noise Types</h3>
 
-        <label><input type="checkbox" checked="checked" ng-click="toggleLayer('transit')"></input><span class="glyphicon glyphicon-road clicked"></span>Transit</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer('dumps')"></input><span class="glyphicon glyphicon-trash clicked"></span>Dumps</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer('fireStations')"></input><span class="glyphicon glyphicon-fire clicked"></span>Fire Stations</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer('colleges')"></input><span class="glyphicon glyphicon-pencil clicked"></span>Colleges</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer('schools')"></input><span class="glyphicon glyphicon-book clicked"></span>Schools</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer('policeStations')"></input><span class="glyphicon glyphicon-bullhorn clicked"></span>Police Stations</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer('hospitals')"></input><span class="glyphicon glyphicon-plus-sign clicked"></span>Hospitals</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer('bars')"></input><span class="glyphicon glyphicon-glass clicked"></span>Bars</label>
+        <label><input type="checkbox" checked="checked" ng-click="toggleLayer('busStop')"></input><span class="glyphicon glyphicon-road clicked"></span>Transit</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer('dump')"></input><span class="glyphicon glyphicon-trash clicked"></span>Dumps</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer('fireStation')"></input><span class="glyphicon glyphicon-fire clicked"></span>Fire Stations</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer('college')"></input><span class="glyphicon glyphicon-pencil clicked"></span>Colleges</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer('school')"></input><span class="glyphicon glyphicon-book clicked"></span>Schools</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer('policeStation')"></input><span class="glyphicon glyphicon-bullhorn clicked"></span>Police Stations</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer('hospital')"></input><span class="glyphicon glyphicon-plus-sign clicked"></span>Hospitals</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer('bar')"></input><span class="glyphicon glyphicon-glass clicked"></span>Bars</label>
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('construction')"></input><span class="glyphicon glyphicon-wrench clicked"></span>Construction</label>
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('demolition')"></input><span class="glyphicon glyphicon-wrench clicked"></span>Demolition</label>
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('noiseComplaints')"></input><span class="glyphicon glyphicon-phone-alt clicked"></span>911 Noise Complaints</label>
