pulling in decibels

--- a/app/views/map2.html
+++ b/app/views/map2.html
@@ -19,7 +19,7 @@
       <div class="map-filters col-md-3 col-sm-12 col-xs-12">
         <h3>Filter Noise Types</h3>
 
-        <label><input type="checkbox" checked="checked" ng-click="toggleLayer('busStop')"></input><span class="glyphicon glyphicon-road clicked"></span>Transit</label>
+        <label><input type="checkbox" checked="checked" ng-click="toggleLayer('transit')"></input><span class="glyphicon glyphicon-road clicked"></span>Transit</label>
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('dump')"></input><span class="glyphicon glyphicon-trash clicked"></span>Dumps</label>
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('fireStation')"></input><span class="glyphicon glyphicon-fire clicked"></span>Fire Stations</label>
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('college')"></input><span class="glyphicon glyphicon-pencil clicked"></span>Colleges</label>
