--- a/app/views/map2.html
+++ b/app/views/map2.html
@@ -19,7 +19,7 @@
       <div class="map-filters col-md-3 col-sm-12 col-xs-12">
         <h3>Filter Noise Types</h3>
 
-        <label><input type="checkbox" checked="checked" ng-click="toggleLayer('transit')"></input><span class="glyphicon glyphicon-road clicked"></span>Transit</label>
+        <label><input type="checkbox" checked="checked" ng-click="toggleLayer('transit')"></input><span class="glyphicon glyphicon-leaf clicked"></span>Transit</label>
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('dump')"></input><span class="glyphicon glyphicon-trash clicked"></span>Dumps</label>
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('fireStation')"></input><span class="glyphicon glyphicon-fire clicked"></span>Fire Stations</label>
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('college')"></input><span class="glyphicon glyphicon-pencil clicked"></span>Colleges</label>
@@ -28,8 +28,12 @@
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('hospital')"></input><span class="glyphicon glyphicon-plus-sign clicked"></span>Hospitals</label>
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('bar')"></input><span class="glyphicon glyphicon-glass clicked"></span>Bars</label>
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('construction')"></input><span class="glyphicon glyphicon-wrench clicked"></span>Construction</label>
-        <label><input type="checkbox" checked="true" ng-click="toggleLayer('demolition')"></input><span class="glyphicon glyphicon-wrench clicked"></span>Demolition</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer('demolition')"></input><span class="glyphicon glyphicon-warning-sign clicked"></span>Demolition</label>
         <label><input type="checkbox" checked="true" ng-click="toggleLayer('noiseComplaints')"></input><span class="glyphicon glyphicon-phone-alt clicked"></span>911 Noise Complaints</label>
+        
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer('stadium')"></input><span class="glyphicon glyphicon-volume-up clicked"></span>Stadiums</label>
+        <label><input type="checkbox" checked="checked" ng-click="toggleLayer('freeway')"></input><span class="glyphicon glyphicon-road clicked"></span>Freeways</label>
+        <label><input type="checkbox" checked="true" ng-click="toggleLayer('heliportOrAirport')"></input><span class="glyphicon glyphicon-plane clicked"></span>Airports/Heliports</label>
 
       </div>
     </div>
